# sdn-security-prototype

./: .gitignore  README.md  index.html  pyproject.toml  styles.css
.github/workflows/: pages.yml
examples/: inventory.json  security_policy.json
sdnsec/: __init__.py  cli.py  config.py  controller.py  models.py  renderers.py
tests/: test_controller.py
