[project]
name = "sdn-security-prototype"
version = "0.1.0"
description = "Prototype SDN controller for automating security configuration across switches and routers."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sdnsec = "sdnsec.cli:main"

[tool.unittest]
start-directory = "tests"
